--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,21 +1,91 @@
 {% extends "base_template.html" %}
 {% block content %}
 
+<style type="text/css">
+    	body
+		{
+		    margin-top: 50px;
+		}
+		a:hover { text-decoration:none; }
+		.btn
+		{
+		    transition: all .2s linear;
+		    -webkit-transition: all .2s linear;
+		    -moz-transition: all .2s linear;
+		    -o-transition: all .2s linear;
+		}
+		.btn-read-more
+		{
+		    padding: 5px;
+		    text-align: center;
+		    border-radius: 0px;
+		    display: inline-block;
+		    border: 2px solid #662D91;
+		    text-decoration: none;
+		    text-transform: uppercase;
+		    font-weight: bold;
+		    font-size: 12px;
+		    color:#662D91;
+		}
+		
+		.btn-read-more:hover
+		{
+		    color: #FFF;
+		    background: #662D91;
+		}
+		.post { border-bottom:1px solid #DDD }
+		.post-title {  color:#662D91; }
+		.post .glyphicon { margin-right:5px; }
+		.post-header-line { border-top:1px solid #DDD;border-bottom:1px solid #DDD;padding:5px 0px 5px 15px;font-size: 12px; }
+		.post-content { padding-bottom: 15px;padding-top: 15px;}
+
+    	</style>
+    
+
+
+
+
 <!-- Blog feed begins here -->
 
-<div class="container">
-<div class="col-md-6">
-	{% for post in posts %}
-    <h1>{{ post.title }}</h1>
-    <p>{{post.body}}</p>
-    <div>
-<span class="badge">{{ post.author.name }}</span>
-     </div>
-    <hr>
-    {% endfor %}
 
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+        	
+        	{% for post in posts %}
+        	
+            <div class="row">
+                <div class="col-md-12 post">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>
+                                <strong><a href="#" class="post-title">{{ post.title }}</a></strong></h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 post-header-line">
+                            <span class="glyphicon glyphicon-user"></span>by <a href="#">{{ post.author.name }}</a> | <span class="glyphicon glyphicon-calendar">
+                            </span> {{ post.timestamp}} <span class="glyphicon glyphicon-comment"></span><a href="#">
+                                PFV</a> |
+                        </div>
+                    </div>
+                    <div class="row post-content">
+                         <div class="col-md-9">
+                            <p>
+                                {{post.body}}
+                            </p>
+                            <p>
+                                <a class="btn btn-read-more" href="#">Read more</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
-</div>
+
 
 <!-- Blog feed ends here -->
 
