--- a/templates/feed.html
+++ b/templates/feed.html
@@ -60,7 +60,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4>
-                                <strong><a href="#" class="post-title">{{ post.title }}</a></strong></h4>
+                                <strong><a href="/feed/{{post.id}}" class="post-title">{{ post.title }}</a></strong></h4>
                         </div>
                     </div>
                     <div class="row">
