--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,10 +9,8 @@
   <div class="panel-heading"><h3 class="panel-title"><strong>New Post </strong></h3></div>
   <div class="panel-body">
   <form action="" method="post" class="form-horizontal">
-  	{{form.hidden_tag()}}
-
-    <p>Title {{form.title}}</p>
-    <p>Body {{form.body}}</p>
+	<input type="text" id="title" name="title" class="span3" placeholder="Title of the blog post" value="{{ request.form.title }}" required> 
+	<textarea id="body" name="body" class="span3"  rows = "8" placeholder="Enter body" value="{{ request.form.body }}" required></textarea>
   
   <button type="submit" class="btn btn-sm btn-default">Post</button>
 </form>
@@ -20,5 +18,12 @@
 </div>
 
 </div>
+
+
+
+
+
+
+
 
 {% endblock %}
