--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -46,7 +46,7 @@
 
       {% if g.user.is_authenticated()%}
       <li><a href="{{ url_for ('index') }}" class="scroll-link">Hi, {{ g.user.name }}</a></li>
-      <li><a href="{{ url_for ('index') }}" class="scroll-link">Home</a></li>
+      <li><a href="{{ url_for ('index') }}" >Home</a></li>
       <li><a href="{{ url_for('new') }}">New Post</a></li>
       <li><a href="{{ url_for('manage') }}">Manage</a></li>
       <li><a href="{{ url_for('logout') }}">Logout</a></li>
