--- a/templates/feed.html
+++ b/templates/feed.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 post-header-line">
-                            <span class="glyphicon glyphicon-user"></span>by <a href="#">{{ post.author.name }}</a> | <span class="glyphicon glyphicon-calendar">
+                            <span class="glyphicon glyphicon-user"></span>by <a href="/feed/{{ post.author.name }}">{{ post.author.name }}</a> | <span class="glyphicon glyphicon-calendar">
                             </span> {{ post.timestamp}} <span class="glyphicon glyphicon-comment"></span><a href="#">
                                 PFV</a> |
                         </div>
