--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -36,26 +36,29 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Panther</a>
+    <a class="navbar-brand" href="{{ url_for('index') }}">Panther</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      
+      <li><a href="{{ url_for ('index') }}" >Home</a></li>
 
       {% if g.user.is_authenticated()%}
-      <li><a href="{{ url_for ('index') }}" class="scroll-link">Hi, {{ g.user.name }}</a></li>
-      <li><a href="{{ url_for ('index') }}" >Home</a></li>
+      <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, {{ g.user.name }} <span class="caret"></span></a>
+	  <ul class="dropdown-menu" role="menu">
       <li><a href="{{ url_for('new') }}">New Post</a></li>
       <li><a href="{{ url_for('manage') }}">Manage</a></li>
+      <li><a href="/feed/{{ g.user.name }}">Feed</a></li>
       <li><a href="{{ url_for('logout') }}">Logout</a></li>
+      </ul>
+     </li>
       {% endif %}
-
-        {% if not g.user.is_authenticated()%}
+      {% if not g.user.is_authenticated()%}
             <li><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
-        {% endif %}
+      {% endif %}
 
 
     </ul>
