--- a/templates/feed.html
+++ b/templates/feed.html
@@ -76,7 +76,7 @@
                                 {{post.body}}
                             </p>
                             <p>
-                                <a class="btn btn-read-more" href="#">Read more</a></p>
+                                <a class="btn btn-read-more" href="/feed/{{post.id}}">Read more</a></p>
                         </div>
                     </div>
                 </div>
